--- a/config/bspwm/modules/rules.conf
+++ b/config/bspwm/modules/rules.conf
@@ -6,13 +6,12 @@ bspc rule -a Alacritty desktop="^1" state=floating follow=on
 
 # --- DESKTOP - 2 : CODE --- #
 bspc rule -a Nvim:nvim desktop="^2"
-bspc rule -a Code:code desktop="^2" 
+bspc rule -a vscodium desktop="^2" 
 bspc rule -a subl desktop="^2" 
-
-bspc rule -a Vscodium desktop="^2"
+bspc rule -a VSCodium desktop="^2"
 
 # --- DESKTOP - 3 : BROWSER --- #
-bspc rule -a Firefox desktop="^3" 
+bspc rule -a firefox desktop="^3" 
 bspc rule -a Chromium desktop="^3" 
 bspc rule -a edge desktop="^3" 
 
