--- a/config/picom/picom-personal.conf
+++ b/config/picom/picom-personal.conf
@@ -120,9 +120,10 @@ opacity-rule = [
   #"80:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
   "50:class_g = 'bspwm' && class_i = 'presel_feedback'",
-  "80:class_g = 'rofi'",
+  "70:class_g = 'rofi'",
   "90:class_g = 'vscodium'",
-  "80:class_g = 'dunst'"
+  "80:class_g = 'dunst'",
+  "80:class_g = 'cursor'"
 ];
 
 #========================= General Settings =========================#
@@ -146,11 +147,65 @@ glx-no-stencil = true;
 use-damage = true;
 log-level = "info";
 
-
+# WINDOW TYPES
 wintypes:
 {
-  tooltip = { fade=true; shadow=true; opacity=0.95; focus=true; full-shadow=false; };
-  popup_menu = { opacity=1.0; }
-  dropdown_menu = { opacity=1.0; }
-  utility = { shadow=false; opacity=1.0; }
+  tooltip = { fade=false; shadow=false; opacity=0.95; focus=true; full-shadow=false; };
+ dock : 
+  {
+    shadow = false;
+    clip-shadow-above = true;
+    opacity = 0.89;
+    full-shadow = false;
+    focus = false;
+  };
+  dnd : 
+  {
+    shadow = false;
+    opacity = 0.8;
+  };
+  popup_menu : 
+  {
+    opacity = 0.8;
+  };
+  dropdown_menu : 
+  {
+    opacity = 0.8;
+  };
+  combo : 
+  {
+    full-shadow = false;
+    shadow = false;
+    focus = false;
+    opacity = 0.8;
+    fade = false;
+  };
+  desktop : 
+  {
+    opacity = 0.8;
+  };
+  dialog : 
+  {
+    opacity = 0.94;
+  };
+  menu : 
+  {
+    opacity = 0.8;
+  };
+
+  notification : 
+  {
+    opacity = 0.7;
+    shadow = false;
+    focus = true;
+    clip-shadow-above = true;
+    full-shadow = false;
+  };
+
+
+
+    utility : 
+  {
+    opacity = 0.8;
+  };
 };
