--- a/config/polybar/themes/rey/config.ini
+++ b/config/polybar/themes/rey/config.ini
@@ -52,9 +52,9 @@ module-margin-left = 0
 module-margin-right = 0
 
 ; Text
-;font-0 = NotoSans-Regular:size=10;2
-;font-0 = "JetBrainsMono:style=Bold:pixelsize=10;3"
-font-0 = "Fantasque Sans Mono:size=12;2"
+;font-0 = NotoSans-Regular:size=12;2
+font-0 = "JetBrainsMono:style=Bold:pixelsize=13;2"
+;font-0 = "Fantasque Sans Mono:size=12;2"
 ; Icons
 font-1 = "Font Awesome 6 Free Solid:size=12;3"
 font-2 = "Material Design Icons Desktop:size=14;4"
