Mejorando y agregando efecto glass a Rofi

--- a/config/modules/autostart.conf
+++ b/config/modules/autostart.conf
@@ -5,7 +5,7 @@ pgrep -x sxhkd > /dev/null || sxhkd -c ~/.config/bspwm/sxhkdrc &
 
 # Reiniciar Polybar si ya está en ejecución, de lo contrario iniciar
 pgrep -x polybar && pkill -x polybar
-polybar -c ~/.config/bspwm/polybar/config.ini &
+polybar -c ~/.config/bspwm/polybar/themes/rey/config.ini moreudev  &
 
 # Reiniciar Dunst si ya está en ejecución, de lo contrario iniciar
 pgrep -x dunst && pkill -x dunst
