--- a/config/modules/rules.conf
+++ b/config/modules/rules.conf
@@ -9,6 +9,7 @@ bspc rule -a Nvim:nvim desktop="^2"
 bspc rule -a vscodium desktop="^2" 
 bspc rule -a subl desktop="^2" 
 bspc rule -a VSCodium desktop="^2"
+bspc rule -a Cursor desktop="^2"
 
 # --- DESKTOP - 3 : BROWSER --- #
 bspc rule -a firefox desktop="^3" 
