--- a/config/picom/picom-personal.conf
+++ b/config/picom/picom-personal.conf
@@ -106,11 +106,11 @@ focus-exclude = [
 
 
 opacity-rule = [
-  "100:class_g    = 'Bar'",             # lemonbar
+  "80:class_g    = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
+  "80:class_g    = 'XTerm'",
+  "80:class_g    = 'URxvt'",
+  "80:class_g    = 'kitty'",
   "70:class_g    = 'Alacritty'",
   "75:class_g    = 'Polybar'",
   "80:class_g    = 'code-oss'",
@@ -122,8 +122,9 @@ opacity-rule = [
   "50:class_g = 'bspwm' && class_i = 'presel_feedback'",
   "70:class_g = 'rofi'",
   "90:class_g = 'vscodium'",
-  "80:class_g = 'dunst'",
-  "80:class_g = 'cursor'"
+  "80:class_g = 'Dunst'",
+  "80:class_g = 'cursor'",
+  "85:class_g = 'Thunar'"
 ];
 
 #========================= General Settings =========================#
