--- a/config/polybar/themes/rey/modules/powermenu.ini
+++ b/config/polybar/themes/rey/modules/powermenu.ini
@@ -13,9 +13,9 @@ click-left = rofi -theme .config/bspwm/rofi/themes/powermenu.rasi  -show p -modi
 [module/powermenu2]
 type = custom/text
 
-content = 󰐥
-content-foreground = ${colors.red}
-content-background = ${colors.mb}
+format = 󰐥
+format-foreground = ${colors.red}
+format-background = ${colors.mb}
 
 click-left = ~/.config/rofi/powermenu/type-1/powermenu.sh
 click-right = powermenu_t1
