--- a/config/polybar/themes/rey/modules/launch.ini
+++ b/config/polybar/themes/rey/modules/launch.ini
@@ -2,8 +2,8 @@
 [module/launcher]
 type = custom/text
 
-content = 異
-content-foreground = ${colors.white}
-content-background = ${colors.mb}
+format = 異
+format-foreground = ${colors.white}
+format-background = ${colors.mb}
 
 click-left = rofi -theme .config/bspwm/rofi/themes/launcher.rasi -show drun
