--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-application-prefer-dark-theme=0
 gtk-enable-animations=true
-gtk-font-name=JetBrainsMono Nerd Font 11
+gtk-font-name=Noto Sans 12
 gtk-icon-theme-name=candy-icons
 gtk-theme-name=Sweet-Dark-v40
 gtk-cursor-theme-name=oreo_black_cursors
