--- a/config/modules/autostart.conf
+++ b/config/modules/autostart.conf
@@ -15,7 +15,7 @@ dunst &
 pidof -q picom || picom -b --config "$HOME"/.config/bspwm/picom/picom-personal.conf &
 
 # Establecer fondo de pantalla con feh
-feh --recursive --randomize --bg-scale ~/Wallpaper/ 
+feh --recursive --randomize --bg-scale ~/Wallpapers/ 
 
 # Iniciar el gestor de energía xfce4-power-manager
 xfce4-power-manager &
