--- a/config/picom/picom-personal.conf
+++ b/config/picom/picom-personal.conf
@@ -112,7 +112,7 @@ opacity-rule = [
   "80:class_g    = 'URxvt'",
   "80:class_g    = 'kitty'",
   "70:class_g    = 'Alacritty'",
-  "75:class_g    = 'Polybar'",
+  "70:class_g    = 'Polybar'",
   "80:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "100:class_g    = 'TelegramDesktop'",
@@ -124,7 +124,8 @@ opacity-rule = [
   "90:class_g = 'vscodium'",
   "80:class_g = 'Dunst'",
   "80:class_g = 'cursor'",
-  "85:class_g = 'Thunar'"
+  "85:class_g = 'Thunar'",
+  "85:class_g = 'notify-send'"
 ];
 
 #========================= General Settings =========================#
