--- a/config/polybar/themes/rey/modules/powermenu.ini
+++ b/config/polybar/themes/rey/modules/powermenu.ini
@@ -1,7 +1,7 @@
 [module/powermenu]
 type = custom/text
 
-format = 󰐥
+format = 󰍳
 format-foreground = ${colors.red}
 format-background = ${colors.mb}
 format-font = 3
