--- a/config/polybar/themes/rey/config.ini
+++ b/config/polybar/themes/rey/config.ini
@@ -58,13 +58,14 @@ font-0 = "JetBrainsMono:style=Bold:pixelsize=13;2"
 ; Icons
 font-1 = "Font Awesome 6 Free Solid:size=12;3"
 font-2 = "Material Design Icons Desktop:size=14;4"
-font-3 = "Material Design Icons Desktop:size=15;5"
+;font-3 = "Material Design Icons Desktop:size=15;5"
+font-3 = "Material\-Design\-Iconic\-Font:style=Design-Iconic-Font:size=14;4"
 ; Glyphs
 font-4 = "MesloLGS NF:style=Regular:size=15;4"
 ;dpi = 96
 font-6 = "Material Icons:style=Bold:size=10;4"
 font-7 = "JetBrainsMono Nerd Font Bandit:style=Medium:size=11;3"
-;font-5 = "Material\-Design\-Iconic\-Font:style=Design-Iconic-Font:size=8;2"
+
 
 
 modules-left = bi launcher bd sep2 bi memory uni cpu uni temperature bd uni title
