--- a/config/polybar/themes/rey/modules/bspwm.ini
+++ b/config/polybar/themes/rey/modules/bspwm.ini
@@ -24,7 +24,7 @@ label-occupied-foreground= ${colors.grey}
 label-urgent = %icon%
 label-urgent-padding = 0
 
-label-empty = ♥
+label-empty = 󱐴
 label-empty-foreground = ${colors.fg}
 label-empty-padding = 1
 label-empty-background = ${colors.mb}
