Mejorando el entorno bspwm

--- a/config/bspwm/modules/rules.conf
+++ b/config/bspwm/modules/rules.conf
@@ -19,7 +19,7 @@ bspc rule -a edge desktop="^3"
 # --- DESKTOP - 4 : FILE --- #
 bspc rule -a Nemo desktop="^4" 
 bspc rule -a Thunar desktop="^4" 
-bspc rule -a pamac-manager="^4"
+bspc rule -a pamac-manager desktop="^4"
 bspc rule -a Geany:geany desktop="^4"
 
 # --- DESKTOP - 5 : REDES --- #
@@ -27,7 +27,7 @@ bspc rule -a Telegram desktop="^5"
 bspc rule -a Discord desktop="^5"
 #bspc rule -a  desktop="^5" 
 
-# --- DESKTOP - 6 : GAMING --- # 
-#bspc rule -a kitty desktop="^6" 
-#bspc rule -a kitty desktop="^6" 
+# --- DESKTOP - 6 : TOOLS --- # 
+#bspc rule -a #### desktop="^6" 
+#bspc rule -a #### desktop="^6" 
 #bspc rule -a Gimp desktop='^2' state=floating follow=on
