--- a/config/bspwm/picom/picom-personal.conf
+++ b/config/bspwm/picom/picom-personal.conf
@@ -125,7 +125,10 @@ opacity-rule = [
   "80:class_g = 'Dunst'",
   "80:class_g = 'cursor'",
   "85:class_g = 'Thunar'",
-  "85:class_g = 'notify-send'"
+  "85:class_g = 'notify-send'",
+  "85:class_g = 'dunst'",
+  "85:class_g = 'dunstify'"
+
 ];
 
 #========================= General Settings =========================#
