--- a/config/bspwm/modules/autostart.conf
+++ b/config/bspwm/modules/autostart.conf
@@ -19,3 +19,6 @@ xfce4-power-manager &
 # Iniciar xfce-polkit si no está en ejecución
 pidof -q xfce-polkit || /usr/lib/xfce-polkit/xfce-polkit &
 
+# autlock 
+
+run xss-lock -- "$HOME"/.config/bspwm/bin/lockscreen
