--- a/config/bspwm/modules/rules.conf
+++ b/config/bspwm/modules/rules.conf
@@ -10,7 +10,7 @@ bspc rule -a vscodium desktop="^2"
 bspc rule -a subl desktop="^2" 
 bspc rule -a VSCodium desktop="^2"
 bspc rule -a Cursor desktop="^2"
-
+bspc rule -a code desktop="^2"
 # --- DESKTOP - 3 : BROWSER --- #
 bspc rule -a firefox desktop="^3" 
 bspc rule -a Chromium desktop="^3" 
