--- a/config/bspwm/polybar/themes/rey/modules/volume.ini
+++ b/config/bspwm/polybar/themes/rey/modules/volume.ini
@@ -26,7 +26,7 @@ ramp-volume-4 = 
 click-right = pavucontrol
 
 
-[module/volume]
+[module/volumen]
 type = internal/pulseaudio
 
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
