--- a/config/bspwm/picom/picom-personal.conf
+++ b/config/bspwm/picom/picom-personal.conf
@@ -29,7 +29,7 @@ corner-radius = 14;
 rounded-corners-exclude = [
 #	"window_type = 'normal'",
 #	"class_g ?= 'rofi'",
-#"class_g ?= 'polybar'",
+#   "class_g ?= 'polybar'",
 	"class_g ?= 'tint2'"
 ];
 
@@ -113,12 +113,12 @@ opacity-rule = [
   "80:class_g    = 'kitty'",
   "70:class_g    = 'Alacritty'",
   "70:class_g    = 'Polybar'",
-  "80:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "100:class_g    = 'TelegramDesktop'",
-  "100:class_g    = 'Joplin'",
-  #"80:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'",
+  "90:class_g    = 'code-oss'",
+  "100:class_g   = 'Meld'",
+  "100:class_g   = 'TelegramDesktop'",
+  "100:class_g   = 'Joplin'",
+  #"95:class_g   = 'firefox'",
+  "100:class_g   = 'Thunderbird'",
   "50:class_g = 'bspwm' && class_i = 'presel_feedback'",
   "70:class_g = 'rofi'",
   "90:class_g = 'vscodium'",
@@ -127,8 +127,9 @@ opacity-rule = [
   "85:class_g = 'Thunar'",
   "85:class_g = 'notify-send'",
   "85:class_g = 'dunst'",
-  "85:class_g = 'dunstify'"
-
+  "85:class_g = 'dunstify'",
+  "90:class_g = 'code'",
+  "85:class_g = 'Geany'"
 ];
 
 #========================= General Settings =========================#
@@ -156,7 +157,7 @@ log-level = "info";
 wintypes:
 {
   tooltip = { fade=false; shadow=false; opacity=0.95; focus=true; full-shadow=false; };
- dock : 
+ dock :
   {
     shadow = false;
     clip-shadow-above = true;
@@ -164,20 +165,20 @@ wintypes:
     full-shadow = false;
     focus = false;
   };
-  dnd : 
+  dnd :
   {
     shadow = false;
     opacity = 0.8;
   };
-  popup_menu : 
+  popup_menu :
   {
     opacity = 0.8;
   };
-  dropdown_menu : 
+  dropdown_menu :
   {
     opacity = 0.8;
   };
-  combo : 
+  combo :
   {
     full-shadow = false;
     shadow = false;
@@ -185,20 +186,20 @@ wintypes:
     opacity = 0.8;
     fade = false;
   };
-  desktop : 
+  desktop :
   {
     opacity = 0.8;
   };
-  dialog : 
+  dialog :
   {
     opacity = 0.94;
   };
-  menu : 
+  menu :
   {
     opacity = 0.8;
   };
 
-  notification : 
+  notification :
   {
     opacity = 0.7;
     shadow = false;
@@ -209,7 +210,7 @@ wintypes:
 
 
 
-    utility : 
+    utility :
   {
     opacity = 0.8;
   };
