--- a/config/bspwm/polybar/themes/rey/config.ini
+++ b/config/bspwm/polybar/themes/rey/config.ini
@@ -59,7 +59,10 @@ font-0 = "JetBrainsMono:style=Bold:pixelsize=13;2"
 font-1 = "Font Awesome 6 Free Solid:size=12;3"
 font-2 = "Material Design Icons Desktop:size=14;4"
 ;font-3 = "Material Design Icons Desktop:size=15;5"
-font-3 = "Material\-Design\-Iconic\-Font:style=Design-Iconic-Font:size=14;4"
+;font-3 = "Material-Design-Iconic-Font:style=Design-Iconic-Font:size=14;4"
+font-3 = "bspwm_fonts:size=14;4"
+#_Regular.ttf
+
 ; Glyphs
 font-4 = "MesloLGS NF:style=Regular:size=15;4"
 ;dpi = 96
@@ -68,7 +71,7 @@ font-7 = "JetBrainsMono Nerd Font Bandit:style=Medium:size=11;3"
 
 
 
-modules-left = bi launcher bd sep2 bi memory uni cpu uni temperature bd uni title
+modules-left = bi launcher bd sep2 bi memory sep cpu sep temperature bd sep title
 modules-center = bi bspwm bd
 modules-right = bi network sep bluetooth sep pulseaudio sep battery_lw sep bd sep2 bi date sep powermenu2 bd
 
