--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,18 +1,18 @@
 [Settings]
-gtk-application-prefer-dark-theme=0
-gtk-enable-animations=true
-gtk-font-name=Noto Sans 12
-gtk-icon-theme-name=candy-icons
 gtk-theme-name=Sweet-Dark-v40
+gtk-icon-theme-name=candy-icons
+gtk-font-name=System-ui 12
 gtk-cursor-theme-name=oreo_black_cursors
-gtk-cursor-theme-size=0
+gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
-gtk-enable-event-sounds=0
-gtk-enable-input-feedback-sounds=0
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=1
+gtk-enable-animations=true
