Cambiando Nombre del Dotfile y haciendo ajustes menores

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,27 +1,27 @@
 # General
-enable_audio_bell no
+enable_audio_bell yes
 include color.ini
 
 # Windows
-border_radius 12
-columns 90
-windows_padding_width 4
+window_padding_width 15
+placement_strategy center
 
 # Fonts
 font_family JetBrainsMono Nerd Font
 font_size 14
 disable_ligatures never
 
-# Cursor 
+# Cursor
 cursor_shape beam
 cursor_beam_thickness 1.8
-
+cursor_stop_blinking_after 15.0
+default_pointer_shape beam
 # URLs
-url_color #fff
+url_color #0087bd
 url_style curly
 
 # Format
-format = "%s" 
+#format = "%s"
 
 # Window management
 map ctrl+left neighboring_window left
@@ -44,25 +44,18 @@ sync_to_monitor yes
 # Layout
 map ctrl+shift+z toggle_layout stack
 
-# Tabs  
+# Tabs
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
 
 # Appearance
+tab_separator " ┇"
 tab_bar_style powerline
 background_opacity 0.70
+#background_blur 0
 
 # Clipboard integration
-kitty +kitten clipboard
-copy_on_select yes 
-
-# Selection
-#: Paste from selection
-map kitty_mod+s paste_from_selection
-map shift+insert paste_from_selection
-
-#: Pass selection to program
-map kitty_mod+o pass_selection_to_program
+copy_on_select no
 
 # Shell
 shell zsh
