--- a/config/kitty/color.ini
+++ b/config/kitty/color.ini
@@ -1,12 +1,9 @@
-cursor_shape          Underline
-cursor_underline_thickness 1
-window_padding_width  20
-
 # Special
 foreground #D9D7D6
+#background #1B1923
 #foreground #a9b1d6
 #background #1a1b26
-# background '#111111
+#background #111111
 
 # Black
 color0 #414868
