Eliminando Archivos Innecesarios y Actualizando los antiguos

--- a/config/gtk-2.0/gtkfilechooser.ini
+++ b/config/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=646
-GeometryY=104
+GeometryX=323
+GeometryY=109
 GeometryWidth=720
 GeometryHeight=605
 SortColumn=name
