--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
 gtk-theme-name=Sweet-Dark-v40
 gtk-icon-theme-name=candy-icons
-gtk-font-name=System-ui 13
-gtk-cursor-theme-name=oreo_black_cursors
-gtk-cursor-theme-size=24
+gtk-font-name=Noto Sans 15
+gtk-cursor-theme-name=Bibata-Modern-Ice
+gtk-cursor-theme-size=18
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
@@ -16,3 +16,4 @@ gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=1
 gtk-enable-animations=true
+gtk-modules=\sappmenu-gtk-module
