--- a/config/bspwm/modules/startup-programs.conf
+++ b/config/bspwm/modules/startup-programs.conf
@@ -3,12 +3,12 @@
 LOGFILE="$HOME/.config/bspwm/modules/autostart.log"
 
 restart_app() {
-    local cmd="$1"
-    local name="$2"
-    echo "$(date) - Reiniciando $name" >>"$LOGFILE"
-    pkill -9 -f "$name" # Matar todos los procesos relacionados
-    eval "$cmd" &       # Reiniciar la aplicación
-    [ $? -ne 0 ] && echo "$(date) - Error al reiniciar $name" >>"$LOGFILE"
+ local cmd="$1"
+ local name="$2"
+ echo "$(date) - Reiniciando $name" >>"$LOGFILE"
+ pkill -9 -f "$name" # Matar todos los procesos relacionados
+ eval "$cmd" & # Reiniciar la aplicación
+ [ $? -ne 0 ] && echo "$(date) - Error al reiniciar $name" >>"$LOGFILE"
 }
 
 echo "$(date) - Autostart iniciado" >>"$LOGFILE"
@@ -19,8 +19,8 @@ echo "$(date) - Autostart iniciado" >>"$LOGFILE"
 # Centro de Notificaciones
 restart_app 'dunst' "dunst"
 
-# Compositor
-restart_app 'picom -c --config ~/.config/bspwm/picom/picom-blur.conf' "picom"
+# Compositor 
+restart_app 'picom --experimental-backends -c --config ~/.config/bspwm/picom/picom-blur.conf' "picom"
 
 # Barra de Estados
 restart_app "$HOME/.config/polybar/launch.sh" "polybar"
