--- a/config/bspwm/picom/picom-blur.conf
+++ b/config/bspwm/picom/picom-blur.conf
@@ -31,10 +31,8 @@ experimental-backends = true
 # Reglas para aplicar el desenfoque solo en ventanas específicas
 blur-background-fixed = true # Desenfoque dinámico según el contenido
 blur-background-exclude = [
-
-#"window_type = 'dock'",    # Excluir docks
-"window_type = 'desktop'", # Excluir el escritorio
-"_GTK_FRAME_EXTENTS"       # Excluir marcos GTK (sin el especificador de tipo "c")
+    "window_type = 'desktop'",
+    "_GTK_FRAME_EXTENTS"
 ]
 
 #################################
@@ -102,6 +100,7 @@ opacity-rule = [
 "85:class_g = 'Polybar'",
 "80:class_g = 'Termite'",
 "95:class_g = 'Thunar'",
+"94:class_g = 'Code'",
 "90:class_g = 'vscodium'",
 "90:class_g = 'VSCodium'",
 "100:class_g = 'Meld'",
@@ -115,7 +114,8 @@ opacity-rule = [
 "100:class_g = 'Minecraft'",
 "100:class_g = 'Navigator'",
 "100:class_g = 'bottles'",
-"85:class_g = 'thunar'"
+"85:class_g = 'thunar'",
+"80:class_g = 'Dunst'"
 ]
 
 #################################
