--- a/config/polybar/modules/battery.ini
+++ b/config/polybar/modules/battery.ini
@@ -1,125 +1,12 @@
+
 [module/battery]
-type = internal/battery
-battery = ${system.sys_battery}
-adapter = ${system.sys_adapter}
-full-at = 99
-poll-interval = 2
-time-format = %H:%M
-
-format-charging = <animation-charging><label-charging>
-label-charging = " %percentage%%"
-label-charging-background = ${wm.mb}
-
-format-discharging = <ramp-capacity><label-discharging>
-label-discharging = " %percentage%%"
-format-discharging-prefix-font = 3
-label-discharging-background = ${wm.mb}
-
-format-full = <label-full>
-format-full-prefix = "󰁹"
-format-full-prefix-font = 2
-format-full-prefix-foreground = ${wm.white}
-format-full-prefix-background = ${wm.mb}
-label-full = "%percentage%%"
-label-full-background = ${wm.mb}
-
-ramp-capacity-0 = 󰂃
-ramp-capacity-1 = 󰁻
-ramp-capacity-2 = 󰁾
-ramp-capacity-3 = 󰂀
-ramp-capacity-4 = 󰂂
-ramp-capacity-foreground = ${wm.white}
-ramp-capacity-background = ${wm.mb}
-ramp-capacity-font = 2
-
-animation-charging-0 = 󰂆
-animation-charging-1 = 󰂇
-animation-charging-2 = 󰂉
-animation-charging-3 = 󰂊
-animation-charging-4 = 󰂅
-animation-charging-foreground = ${wm.white}
-animation-charging-background = ${wm.mb}
-animation-charging-font = 2
-animation-charging-framerate = 700
-
-click-left = $HOME/.config/rofi/applets/bin/battery.sh 
-
-[module/battery2]
-type = internal/battery
-
-full-at = 99
-
-battery = ${system.sys_battery}
-adapter = ${system.sys_adapter}
-
-poll-interval = 2
-time-format = %H:%M
-
-format-charging = <animation-charging> <label-charging>
-format-charging-background = ${wm.mb}
-;format-charging-prefix = 
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-background = ${wm.mb}
-
-format-full = <label-full>
-format-full-prefix = "󰁹"
-format-full-prefix-font = 2
-format-full-prefix-foreground = ${wm.white}
-format-full-prefix-background = ${wm.mb}
-label-charging = %percentage%%
-label-charging-background = ${wm.mb}
-label-discharging = %percentage%%
-label-discharging-background = ${wm.mb}
-label-full = %percentage%%
-label-full-background = ${wm.mb}
-
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-ramp-capacity-font = 2
-ramp-capacity-foreground = ${wm.white}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
-animation-charging-font = 2
-animation-charging-foreground = ${wm.white}
-animation-charging-background = ${wm.mb}
-animation-charging-framerate = 750
-click-right= ~/.config/rofi/applets/bin/battery.sh
-
-[module/battery_lw]
-type = custom/script
-exec = ~/.config/bspwm/scripts/battery/batt.sh --status
-interval = 5
-click-left = ~/.config/rofi/applets/bin/battery.sh &
-format-background = ${WM.mb}
-
-
-[module/battery-3]
 type = internal/battery
 full-at = 98
 low-at = 10
-battery = BAT0
-adapter = ACAD
+battery = ${system.sys_battery}
+adapter = ${system.sys_adapter}
 poll-interval = 5
 time-format = %H:%M
-
-# Ajusta el tamaño de la fuente
-font-0 = "Font Awesome 5 Free:style=Solid:size=16;3"
 
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
@@ -138,7 +25,7 @@ ramp-capacity-1 = ""
 ramp-capacity-2 = ""
 ramp-capacity-3 = ""
 ramp-capacity-4 = ""
-
+ramp-capacity-font = 3
 # Barra de capacidad más delgada
 bar-capacity-width = 10
 
@@ -149,6 +36,7 @@ animation-charging-2 = ""
 animation-charging-3 = ""
 animation-charging-4 = ""
 animation-charging-framerate = 910
+animation-charging-font = 3
 
 # Animación para el estado descargando
 animation-discharging-0 = ""
@@ -157,11 +45,13 @@ animation-discharging-2 = ""
 animation-discharging-3 = ""
 animation-discharging-4 = ""
 animation-discharging-framerate = 500
+animation-discharging-font = 3
 
 # Animación para estado de batería baja
 animation-low-0 = " "
 animation-low-1 = " "
 animation-low-framerate = 1500
+animation-low-font = 3
 
 # Estado de batería baja (advertencia)
 animation-low-foreground = #d71c1c  
