--- a/config/polybar/modules/brightness.ini
+++ b/config/polybar/modules/brightness.ini
@@ -5,7 +5,7 @@ card = ${system.sys_graphics_card}
 enable-scroll = true
 format = <ramp><label>
 #label = "%percentage%%"
-label-background = ${wm.mb}
+label-background = ${wm.trans}
 
 ramp-0 = 
 ramp-1 = 
@@ -13,8 +13,8 @@ ramp-2 = 
 ramp-3 = 
 ramp-4 = 
 ramp-padding = 3pt
-ramp-foreground = ${wm.white}
-ramp-background = ${wm.mb}
+ramp-foreground = ${wm.fg}
+ramp-background = ${wm.trans}
 
 [module/xbacklight-2]
 type = internal/xbacklight
