--- a/config/polybar/modules/powermenu.ini
+++ b/config/polybar/modules/powermenu.ini
@@ -22,7 +22,7 @@ click-right = powermenu_t1
 
 [module/powermenu-3]
 type = custom/text 
-format =" " 
+format =" "
 format-padding = 1
-click-left = sh $HOME/bin/powermenu &
+click-left = $HOME/.config/rofi/powermenu/type-1/powermenu.sh &
 format-foreground =#e5423f
