--- a/config/polybar/modules/sound.ini
+++ b/config/polybar/modules/sound.ini
@@ -1,193 +1,20 @@
-[bar/volume]
-type = internal/volume
-format-prefix = 
-format = <label>
-format-muted = <label>
-label = %porcentage%
-scroll-up = exec amixer -D pulse sset Master 5%+
-scroll-down = exec amixer -D pulse sset Master 5%-
-click-left = exec pavucontrol
-
-[module/alsa]
-type = internal/alsa
-
-# Volume Icons
-ramp-volume-0 = 󰕿 
-ramp-volume-1 = 󰖀 
-ramp-volume-2 = 󰕾 
-ramp-volume-3 = 󰕾 
-ramp-volume-4 = 󰕾 
-
-# Headphones Icon
-ramp-headphones-0 = 󰋋 
-ramp-headphones-1 = 󰽟 
-
-# Formatting
-format-volume = <ramp-volume> <label-volume>
-format-volume-padding = 1
-format-volume-font = 3  # Increase font size
-
-# Muted State
-format-muted = 󰖁 
-format-muted-padding = 1
-format-muted-font = 3   # Consistent font size
-
-# Label
-label-volume = %percentage%%
-
-
-# WM
-format-volume-foreground = ${wm.fg}
-ramp-volume-foreground = #d35f5e
-format-muted-foreground = #d35f5e
-
-# Additional Configuration
-interval = 5
-
-[module/alsa-2]
-type = internal/alsa
-
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
-
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-master-mixer = Master
-
-; Optionally define speaker and headphone mixers
-; Default: none
-;;speaker-mixer = Speaker
-; Default: none
-;;headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-;;headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-;;mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
-;format-volume = <ramp-volume><label-volume><bar-volume>
-;format-volume = <label-volume><bar-volume>
-format-volume = <bar-volume>
-format-volume-background = ${wm.trans}
-format-volume-padding = 0
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-muted = <label-muted>
-;format-muted-prefix = ""
-;format-muted-prefix-font = 3
-;format-muted-prefix-foreground = ${wm.purple}
-;format-muted-prefix-background = ${wm.trans}
-format-muted-background = ${wm.trans}
-format-muted-padding = 0
-
-; Available tokens:
-;   %percentage% (default)
-;label-volume = "%percentage%% "
-;label-volume = "  "
-;label-volume-foreground = ${wm.purple}
-;label-volume-background = ${wm.trans}
-
-bar-volume-width = 10
-;bar-volume-foreground = ${wm.purpleCYAN}
-bar-volume-foreground-0 = ${wm.purple}
-bar-volume-foreground-1 = ${wm.purple}
-bar-volume-foreground-2 = ${wm.purple}
-bar-volume-foreground-3 = ${wm.purple}
-bar-volume-foreground-4 = ${wm.purple}
-bar-volume-foreground-5 = ${wm.yellow}
-bar-volume-foreground-6 = ${wm.yellow}
-bar-volume-foreground-7 = ${wm.yellow}
-bar-volume-foreground-8 = ${wm.red}
-bar-volume-foreground-9 = ${wm.red}
-;bar-volume-fill = "━"
-bar-volume-fill = ""
-;bar-volume-fill = ""
-;bar-volume-fill = " "
-;bar-volume-fill = ""
-;bar-volume-fill-foreground = ${wm.purple}
-bar-volume-fill-font = 1
-bar-volume-fill-background = ${wm.trans}
-
-;bar-volume-empty = ""
-;bar-volume-empty = "━"
-;bar-volume-empty = ""
-;bar-volume-empty = " "
-bar-volume-empty = ""
-bar-volume-empty-font = 1
-bar-volume-empty-foreground = ${wm.bg}
-bar-volume-empty-background = ${wm.trans}
-
-bar-volume-indicator = "雷"
-;bar-volume-indicator = ""
-bar-volume-indicator-foreground = ${wm.cyan}
-bar-volume-indicator-background = ${wm.trans}
-bar-volume-indicator-font = 1 
-
-; Available tokens:
-;   %percentage% (default
-label-muted = "Muted"
-label-muted-foreground = ${wm.purple}
-label-muted-background = ${wm.trans}
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = ""
-ramp-volume-1 = ""
-ramp-volume-2 = ""
-ramp-volume-3 = ""
-ramp-volume-4 = ""
-ramp-volume-5 = ""
-ramp-volume-foreground = ${wm.purple}
-ramp-volume-background = ${wm.trans}
-ramp-volume-font = 3
-
-; If defined, it will replace <ramp-volume> when
-; headphones are plugged in to `headphone_control_numid`
-; If undefined, <ramp-volume> will be used for both
-; Only applies if <ramp-volume> is used
-;ramp-headphones-0 = " "
-
 
 [module/alsa-3]
-type = internal/alsa
+type = internal/pulseaudio
 master-soundcard = default
 speaker-soundcard = default
 headphone-soundcard = default
 
 
 
-; Iconos de volumen
-ramp-volume-0 = 󰕿  
-ramp-volume-1 = 󰖀  
-ramp-volume-2 = 󰕾 
-ramp-volume-3 = 󰕾 
-ramp-volume-4 = 󰕾 
+; Y en el módulo de audio:
+ramp-volume-0 = %{T2}🔇%{T-}
+ramp-volume-1 = %{T2}🔈%{T-} 
+ramp-volume-2 = %{T2}🔉%{T-}
+ramp-volume-3 = %{T2}🔊%{T-} 
+ramp-volume-4 = %{T2}🔊%{T-}   
+
+
 
 ; Iconos de auriculares
 ramp-headphones-0 = 󰋋  
@@ -221,16 +48,13 @@ border-color = #FFCDD2
 border-size = 1
 
 [module/alsa-4]
-type = internal/alsa
-
-; Tarjetas de sonido y mezcladores
-master-soundcard = default
-master-mixer = Master
+type = internal/pulseaudio
 
 ; Iconos de volumen
-ramp-volume-0 = 󰕿
-ramp-volume-1 = 󰖀
-ramp-volume-2 = 󰕾
+ramp-volume-0 = %{T2}󰕿%{T-}
+ramp-volume-1 = %{T2}󰖀%{T-}
+ramp-volume-2 = %{T2}%{T-}
+
 
 ; Formato inicial (sin ratón encima)
 format-volume = <ramp-volume>
@@ -249,7 +73,8 @@ bar-volume-fill = ▒
 bar-volume-empty = ░
 
 ; Eventos de ratón
-click-left = amixer set Master toggle  
-scroll-up = amixer set Master 5%+      
-scroll-down = amixer set Master 5%-    
-hover = polybar-msg action "#alsa#alt" 
+click-left = pactl set-sink-mute @DEFAULT_SINK@ toggle  
+scroll-up = pactl set-sink-volume @DEFAULT_SINK@ +5%      
+scroll-down = pactl set-sink-volume @DEFAULT_SINK@ -5%    
+hover = polybar-msg action "#alsa#alt"  
+click-right = pavucontrol
