--- a/config/bspwm/modules/rules.conf
+++ b/config/bspwm/modules/rules.conf
@@ -1,4 +1,6 @@
-## --- RULES  --- ##
+## --- RULES  --- ##            
+bspc rule -a xdg-desktop-portal-gtk desktop="^1"
+
 
 # --- DESKTOP - 1 : TERMINAL --- #
 bspc rule -a kitty desktop="^1"
@@ -11,8 +13,9 @@ bspc rule -a subl desktop="^2"
 bspc rule -a VSCodium desktop="^2"
 bspc rule -a Cursor desktop="^2"
 bspc rule -a code desktop="^2"
-bspc rule -a vscodium - insiders desktop="^2"
-
+bspc rule -a Code desktop="^2"
+    bspc rule -a vscodium - insiders desktop="^2"
+    bspc rule -a jetbrains-idea-ce desktop="2"
 # --- DESKTOP - 3 : BROWSER --- #
 bspc rule -a firefox desktop="^3"
 bspc rule -a Chromium desktop="^3"
@@ -33,7 +36,7 @@ bspc rule -a Telegram desktop="^5"
 bspc rule -a Discord desktop="^5"
 #bspc rule -a  desktop="^5"
 
-# --- DESKTOP - 6 : RANDOM --- #
+# --- DESKTOP - 6 : RAMDOM --- #
 bspc rule -a Gimp desktop='^8' state=floating follow=on
 bspc rule -a mplayer2 state=floating
 bspc rule -a Kupfer.py focus=on
