--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,7 +7,7 @@ window_padding_width 15
 placement_strategy center
 
 # Fonts
-font_family JetBrainsMono Nerd Font
+font_family CaskaydiaCove Nerd Font
 font_size 14
 disable_ligatures never
 
