--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -16,6 +16,7 @@
 include-file = colors.ini
 include-file = $HOME/.config/polybar/decorations.ini
 include-directory = modules/
+include-file = fonts.ini
 
 [bar/rey]
 monitor = ${env:MONITOR:}
@@ -40,7 +41,7 @@ background = ${wm.trans}
 foreground = ${wm.fg}
 
 border-top-size = 4
-border-bottom-size = 4
+border-bottom-size = 2
 radius = 0
 border-radius = 6
 
@@ -54,13 +55,8 @@ line-size = 2
 
 modules-left = filesystem space  cpu space space memory space space temperature 
 modules-center =  bspwm
-modules-right = round-left time round-right space alsa-4 space battery-3 space wlan powermenu-3
+modules-right =  tray space round-left time round-right space network space backlight space battery space powermenu-3
 
-font-0 = JetBrainsMono Nerd Font:style=Bold:pixelsize=13;3
-font-1 = JetBrainsMono Nerd Font:size=18;5
-font-2 = Material Design Icons:style=Bold:size=13;3
-font-3 = unifont:fontformat=truetype:size=13:antialias=true;
-font-4 = FiraCode Nerd Font:style=Regular:size=10;3
 
 
 spacing = 0
