--- a/config/polybar/modules/network.ini
+++ b/config/polybar/modules/network.ini
@@ -1,84 +1,6 @@
 [module/network]
-type = internal/network
-interface = wlan0
-
-interval = 3.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = %{A1: bash ".config/bspwm/scripts/rofi-wifi.sh":}<ramp-signal>%{A}
-#format-connected-prefix = " "
-
-ramp-signal-0 = 󰤯
-ramp-signal-1 = 󰤟
-ramp-signal-2 = 󰤢
-ramp-signal-3 = 󰤥
-ramp-signal-4 = 󰤨
-ramp-signal-5 = 󰤨
-
-format-connected-background = ${wm.mb}
-format-connected-foreground = ${wm.white}
-label-connected-background = ${wm.mb}
-label-connected-foreground = ${wm.white}
-
-format-disconnected = %{A1: bash ".config/bspwm/scripts/rofi-wifi.sh":}<label-disconnected>%{A}
-format-disconnected-prefix = "󰤮 "
-
-format-disconnected-prefix-background = ${wm.mb}
-format-disconnected-foreground = ${wm.red}
-
-label-disconnected-background = ${wm.mb}
-label-disconnected-foreground = ${wm.red}
-
-format-packetloss = %{A1: bash ".config/bspwm/scripts/rofi-wifi.sh":}<animation-packetloss>%{A}
-animation-packetloss-0 = 󰤫
-animation-packetloss-1 = 󰤦
-format-packetloss-background = ${wm.mb}
-format-packetloss-foreground = ${wm.orange}
-; Framerate in milliseconds
-animation-packetloss-framerate = 500
-
-
-
-[module/wired]
-type = internal/network
-interface = wlan0
-interval = 1.0
-
-format-connected = <label-connected>
-format-connected-padding = 1
-format-connected-prefix = %{T7}%{T-}
-format-connected-prefix-foreground = ${wm.mb}
-label-connected = %{T7} %{T-}%{T2}%downspeed%%{T-}
-label-connected-foreground = ${wm.fg}
-
-format-disconnected = <label-disconnected>
-format-disconnected-padding = 1
-format-disconnected-prefix = %{T7}%{T-}
-format-disconnected-prefix-foreground = ${wm.red}
-label-disconnected = %{T2} :(%{T-}
-label-disconnected-foreground = ${wm.fg}
-
-
-[module/wlan]
-type = internal/network
-interface = wlp1s0
-interval = 3
-format-connected =  <label-connected>
-label-connected = "%{A1:sh $HOME/bin/wifimenu:}  %{A}"
-label-connected-foreground = #A3BE8C 
-format-disconnected = <label-disconnected>
-label-disconnected = "%{A1:sh $HOME/bin/wifimenu:}󰖪 %{A}"
-label-disconnected-foreground = #D35F5E
-
-[module/ethernet]
-type = internal/network
-interface = ${system.network_interface_wired}
-format-connected = <label-connected>
-format-connected-prefix = "󰈁 "fd
-format-connected-padding = 1
-format-disconnected = <label-disconnected>
-format-disconnected-prefix = "󰈂 "
-format-disconnected-padding = 1
-label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
-label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
+type = custom/script
+interval = 8
+exec = $HOME/.config/bspwm/scripts/system/network
+click-right = nm-connection-editor
+click-left = $HOME/.config/bspwm/scripts/system/NetManagerDM
