--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -9,7 +9,8 @@
 ;; Run `ip link | awk '/state UP/ {print $2}' | tr -d :` to get active network interface.
 
 [system]
-sys_adapter = AC
+sys_adapter = ACAD
 sys_battery = BAT0
 sys_graphics_card = intel_backlight
 sys_network_interface = wlan0
+sys_ethernet_interface = enp1s0
