cambiar permisos de archivos de configuración y scripts a ejecutable

--- a/config/bspwm/picom/picom-blur.conf
+++ b/config/bspwm/picom/picom-blur.conf
@@ -65,7 +65,7 @@ round-borders-rule = [
 
 #################################
 # Sombra
-#################################
+###############################
 shadow = false        # Habilitar sombras
 shadow-radius = 12    # Radio de la sombra
 shadow-offset-x = -12 # Desplazamiento en X
@@ -74,10 +74,9 @@ shadow-opacity = 0.7  # Opacidad de la sombra
 shadow-exclude = [
 "name = 'Notification'", # Excluir notificaciones
 "class_g = 'Conky'",     # Excluir Conky
-"_GTK_FRAME_EXTENTS@"    # Excluir marcos GTK
+"_GTK_FRAME_EXTENTS"    # Excluir marcos GTK
 ]
 shadow-ignore-shaped = false
-
 #################################
 # Fading (Efecto de aparición)
 #################################
